fixed footer covering text

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html, body {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     align-content: center;
+    margin-bottom: 100px;
 }
 
 h1 {
